--- a/WahChat/WahChat/WahChat.csproj
+++ b/WahChat/WahChat/WahChat.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -70,6 +71,12 @@
     </Compile>
     <Compile Include="Forms\Chat.Designer.cs">
       <DependentUpon>Chat.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\CreateLetter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CreateLetter.Designer.cs">
+      <DependentUpon>CreateLetter.cs</DependentUpon>
     </Compile>
     <Compile Include="Network\Connection.cs" />
     <Compile Include="Network\CycleCoder.cs" />
@@ -92,6 +99,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\Chat.resx">
       <DependentUpon>Chat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\CreateLetter.resx">
+      <DependentUpon>CreateLetter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
