--- a/CircleMail/CircleMail/CircleMail.csproj
+++ b/CircleMail/CircleMail/CircleMail.csproj
@@ -68,11 +68,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\Chat.cs">
+    <Compile Include="Forms\Mail.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Chat.Designer.cs">
-      <DependentUpon>Chat.cs</DependentUpon>
+    <Compile Include="Forms\Mail.Designer.cs">
+      <DependentUpon>Mail.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\CreateLetter.cs">
       <SubType>Form</SubType>
@@ -99,8 +99,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms\Chat.resx">
-      <DependentUpon>Chat.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Mail.resx">
+      <DependentUpon>Mail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\CreateLetter.resx">
       <DependentUpon>CreateLetter.cs</DependentUpon>
